assets/css/navbar.scss
/**
*   Navbar 添加毛玻璃效果
*   参照 Apple Store 配置
*/

#header-desktop {
  [theme='light'] & {
    background-color: hsla(0, 0%, 100%, 0.65);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
    border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
  }

  [theme='dark'] & {
    background: rgba(33, 33, 35, 0.75);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
  }

  [theme='black'] & {
    background: rgba(0, 0, 0, 0.65);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
    border-bottom: 1px solid hsla(0, 0%, 60%, 0.3);
  }
}

/**
  *   移动版 Navbar 添加毛玻璃效果
  *   参照 Apple Store 配置
  */

#header-mobile {
  [theme='light'] & {
    background-color: hsla(0, 0%, 100%, 1);
    border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
  }

  [theme='dark'] & {
    background: rgba(33, 33, 35, 1);
  }

  [theme='black'] & {
    background: rgba(0, 0, 0, 1);
  }
}

/**
  *   移动版 menu 匹配颜色设置
  */

#header-mobile .header-container .menu {
  [theme='light'] & {
    background-color: hsla(0, 0%, 100%, 1);
  }
  [theme='dark'] & {
    background: rgba(33, 33, 35, 1);
  }
}

/**
*   配合 SVG 标题
*   去除 Navbar 行高
*/

#header-desktop {
  line-height: 0rem;
}

#header-mobile {
  line-height: 0rem;
}

